<resources>
    <string name="app_name">UHB Community</string>

    <!-- Start Activity -->
    <string name="login">Login</string>
    <string name="register">Register</string>

    <!-- Register & Login Activity -->
    <string name="username">Username</string>
    <string name="full_name">Full name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="remember_me">Remember Me</string>
    <string name="accept_rules_1">I accept the</string>
    <string name="accept_rules_2"><u>Rules and terms of use</u></string>
    <string name="have_an_account">Already have an account? Log in</string>
    <string name="donot_have_an_account">Do not have an account? Register</string>
    <string name="forgot_pass">Forgot password?</string>

    <!-- Reset password Activity -->
    <string name="reset_pass_title">Reset Password</string>
    <string name="reset_pass_email">Your Email</string>
    <string name="reset_pass_recover">Recover</string>
    <string name="reset_pass_cancel">Cancel</string>
    <string name="sending_email">Sending email ...</string>
    <string name="recovering_email_sent">An email message has been sent to your Email to reset your password</string>
    <string name="failed_to_send">Failed to send the email message to your email address</string>

    <!-- Edit text errors  -->
    <string name="required_filed">Required field!</string>
    <string name="invalid_email">Invalid email format!</string>
    <string name="password_length">Password length must be at least 8 characters</string>
    <string name="must_accept_rules">You must accept the rules and terms of use</string>
    <string name="used_email">This email address is already used by another account</string>
    <string name="no_account_email">There is no account created by this email address</string>
    <string name="email_sent">An email has been sent to your email to verify your account</string>
    <string name="please_verify">Please verify your Email !</string>
    <string name="incorrect_pass">The password is not correct</string>
    <string name="banned_account">Your account has been banned by an administrator</string>
    <string name="used_username">This username is already used</string>
    <string name="username_domain">Only use these characters “A-Z, a-z, _”</string>
    <string name="dialog_ok">Ok</string>
    <string name="please_wait">Please wait</string>

    <!-- Bottom menu -->
    <string name="item_search">Search</string>
    <string name="item_add">Add</string>
    <string name="item_notifications">Notifications</string>
    <string name="item_profile">Profile</string>
    <string name="item_home">Home</string>

    <!-- Add post Activity -->
    <string name="post_title">New Post</string>
    <string name="post">Post</string>
    <string name="cancel">Cancel</string>
    <string name="et_description_hint">Write here</string>
    <string name="btn_add_picture">Add Picture</string>
    <string name="btn_remove_picture">Remove Picture</string>
    <string name="uploading">Uploading, please wait</string>
    <string name="try_again">Try again</string>
    <string name="crop_image_title">Choose Picture</string>
    <string name="crop_image_btn">Ok</string>
    <string name="category_error">You must select category</string>
    <string name="category_hints">Hints to select the category</string>
    <string name="hint1">1- Questions: If you want to ask a question or you have a problem.</string>
    <string name="hint2">2- Advices: If you have an advice that you think will be useful for others.</string>
    <string name="hint3">3- News: If you have news related to the university.</string>
    <string-array name="categories">
        <item>Select Category</item>
        <item>Questions</item>
        <item>Advices</item>
        <item>News</item>
    </string-array>

    <!-- Edit post Activity -->
    <string name="apply_changes">Apply Changes</string>
    <string name="edit_post_title">Edit Post</string>

    <!-- For the post -->
    <string name="likes">Like</string>
    <string name="comments">Comment</string>
    <string name="edit_post">Edit post</string>
    <string name="delete_post">Delete post</string>
    <string name="like_title">Likes</string>

    <!-- For the comment -->
    <string name="comment_activity_title">Comments</string>
    <string name="write_comment">Write comment</string>
    <string name="no_comment">Write comment!</string>
    <string name="delete_comment">Do you want to delete this comment?</string>
    <string name="delete_comment_yes">Delete</string>
    <string name="delete_comment_cancel">Cancel</string>

    <!-- For the post -->
    <string name="delete_post_dialog">Are you sure you want to delete this post?</string>
    <string name="delete_post_yes">Delete</string>
    <string name="delete_post_cancel">Cancel</string>

    <!-- For the profile -->
    <string name="profile_btn_edit">Edit Profile</string>
    <string name="profile_btn_send">Send Email</string>
    <string name="post_label">Post</string>
    <string name="bio_label">Bio</string>
    <string name="edit_profile_title">Edit Profile</string>
    <string name="name_label">Name</string>
    <string name="apply_edit_profile">Apply Changes</string>
    <string name="change_photo">Change Photo</string>

    <!-- For the send email -->
    <string name="send_email_title">Send Email</string>
    <string name="send_email_btn">Send</string>
    <string name="email_label">Email</string>
    <string name="email_hint_to">To:</string>
    <string name="email_hint_subject">Subject:</string>
    <string name="email_hint_message">Message:</string>
    <string name="send_error">Sorry! There is no mail application installed in your device.</string>
    <string name="choose_app">Choose an Email application</string>

    <!-- For the search view -->
    <string name="search_hint">Search</string>
    <string name="search_user">User</string>
    <string name="search_post">Post</string>

    <!-- For the Notification -->
    <string name="notification_title">Notifications</string>
    <string name="notification_like">Liked your post</string>
    <string name="notification_comment">Replied to your post</string>
    <string name="view_post_title">Post</string>
    <string name="view_deleted_post">This post has been deleted</string>

    <!-- For the drawer menu -->
    <string name="open">Open navigation drawer</string>
    <string name="close">Close navigation drawer</string>

    <string name="uhb">UOHB</string>
    <string name="uhb_community">UHB Community</string>
    <string name="other">Other</string>

    <string name="links">Important Links</string>
    <string name="contact">Contact Us</string>
    <string name="about">About Us</string>
    <string name="panel">Control Panel</string>
    <string name="settings">Settings</string>
    <string name="logout">Log out</string>

    <!-- For the Links -->
    <string name="link_title">Important Links</string>
    <string name="link1">UoHB Twitter</string>
    <string name="link2">REG Twitter</string>
    <string name="link3">DSA Twitter</string>
    <string name="link4">Edhaah Twitter</string>
    <string name="link5">UoHB Website</string>
    <string name="link6">SIS Website</string>
    <string name="link7">Blackboard Website</string>

    <!-- For the contact us -->
    <string name="contact_title">Contact Us</string>

    <!-- For the about us -->
    <string name="about_title">About Us</string>
    <string name="version_label">Version:</string>
    <string name="version">1.0.0</string>
    <string name="dev_label">Developers:</string>
    <string name="dev_1">Eng. Abdulrahman Mohammed AL-mousa</string>
    <string name="dev_2">Eng. Abdullah Aldilaijan</string>
    <string name="about_label">About Application:</string>
    <string name="about_content">This application is developed as a graduation project of major Software Engineering at UOHB 2021. The main idea of the application is to facilitate the communication within the community of the University of Hafr Al Batin.</string>
    <string name="rights">All rights reserved 2020/2021</string>

    <!-- For the settings -->
    <string name="settings_title">Settings</string>
    <string name="settings_change_pass">Change Password</string>
    <string name="settings_termsOfUse">Terms of use</string>
    <string name="settings_language">Application Language</string>
    <string name="settings_language_en">English</string>
    <string name="settings_language_ar">Arabic</string>

    <!-- For the admin/moderator-->
    <string name="toast_verified">Account has been verified</string>
    <string name="toast_add_moderator">This user has been set as a moderator</string>
    <string name="toast_delete_moderator">This moderator has been removed</string>
    <string name="verify_account_">Verify Account</string>
    <string name="add_moderator_">Add Moderator</string>
    <string name="delete_moderator_">Delete Moderator</string>
    <string name="verify_dialog">Are you sure you want to verify this account?</string>
    <string name="verify_yes">Verify</string>
    <string name="verify_cancel">Cancel</string>

    <!-- For the terms of use -->
    <string name="rules_title">Terms of use</string>
    <string name="rules_1">1- Discussing about politics or religion is prohibited.</string>
    <string name="rules_2">2- Mistreating any member is prohibited.</string>
    <string name="rules_3">3- Using the application in illegal activities according to the Saudi law is prohibited.</string>
    <string name="rules_4">4- Publishing pictures that are immoral or contrary to customs and public decency is prohibited.</string>
    <string name="rules_5">5- Publishing content that is not related to the application like advertising/selling is prohibited.</string>
    <string name="rules_6">6- Spreading lies and rumors is prohibited.</string>
    <string name="rules_7">7- Uploading an infected files or malwares/viruses is prohibited.</string>
    <string name="rules_8">8- Trying to reach private data or information in an illegal way is prohibited.</string>
    <string name="rules_9">9- Trying to Dos the application is prohibited.</string>
    <string name="rules_10">10- Any prohibited act may result in banning the user and/or deleting the post.</string>
    <string name="rules_11">11- If hacking is involved the problem may reach to the higher authorities.</string>
    <string name="rules_12">12- To save time search about your problem before posting about it.</string>
    <string name="rules_13">13- Post under the right categorization.</string>
    <string name="rules_14">14- Accepting terms of use indicate that you allow the sharing of you registered email address.</string>

</resources>