<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".DrawerMenu.AboutUsActivity">

    <com.google.android.material.appbar.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/appbar"
        android:background="?android:attr/windowBackground">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:id="@+id/toolbar"
            app:title="@string/about_title"
            app:titleTextColor="@color/black"
            android:background="?android:attr/windowBackground"/>
    </com.google.android.material.appbar.AppBarLayout>

    <ImageView
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:id="@+id/logo"
        android:src="@drawable/header_logo"
        android:layout_below="@id/appbar"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="35dp"
        android:layout_marginBottom="15dp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/version_label"
        android:layout_below="@id/logo"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/version_label"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/version"
        android:layout_below="@id/version_label"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/version"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dev_label"
        android:layout_below="@id/version_label"
        android:layout_marginStart="30dp"
        android:layout_marginTop="55dp"
        android:text="@string/dev_label"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dev_1"
        android:layout_below="@id/dev_label"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/dev_1"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/dev_2"
        android:layout_below="@id/dev_1"
        android:layout_marginStart="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/dev_2"
        android:textSize="14sp"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_label"
        android:layout_below="@id/dev_2"
        android:layout_marginStart="30dp"
        android:layout_marginTop="25dp"
        android:text="@string/about_label"
        android:textSize="17sp"
        android:textStyle="bold"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/about_content"
        android:layout_below="@id/about_label"
        android:layout_marginStart="30dp"
        android:layout_marginEnd="30dp"
        android:layout_marginTop="10dp"
        android:text="@string/about_content"
        android:textSize="14sp"
        android:lineSpacingExtra="5dp"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/tv_rights"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/rights"/>

</RelativeLayout>