<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="274dp"

        android:id="@+id/iv_background"
        android:src="@drawable/form_background" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/uhb"
        android:layout_marginTop="20dp"
        android:text="UHB"
        android:textSize="55sp"
        android:textStyle="bold"
        android:layout_alignParentTop="true"
        android:layout_centerInParent="true"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="COMMUNITY"
        android:textSize="35sp"
        android:layout_below="@+id/uhb"
        android:layout_centerInParent="true"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_alignParentBottom="true"
        android:background="@drawable/form_background2">



        <EditText
            android:id="@+id/et_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_form_background"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/username"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/et_fullName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_form_background"
            android:drawableStart="@drawable/ic_user"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/full_name"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:padding="15dp" />

        <EditText
            android:id="@+id/et_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="25dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/edit_text_form_background"
            android:drawableStart="@drawable/ic_email"
            android:drawablePadding="10dp"
            android:ems="10"
            android:hint="@string/email"
            android:importantForAutofill="no"
            android:inputType="textEmailAddress"
            android:padding="15dp" />

        <com.google.android.material.textfield.TextInputLayout
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:id="@+id/password_layout"
            app:passwordToggleEnabled="true"
            android:layout_marginTop="20dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            app:hintEnabled="false">

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/edit_text_form_background"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp"
                android:ems="10"
                android:hint="@string/password"
                android:importantForAutofill="no"
                android:inputType="textPassword"
                android:padding="15dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <CheckBox
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/cb_accept_rules"
                android:text="@string/accept_rules_1"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="20dp"
                android:buttonTint="@color/teal_200"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/terms_of_use"
                android:text="@string/accept_rules_2"
                android:textColor="@color/black"
                android:layout_marginTop="15dp"
                android:layout_marginBottom="5dp"
                android:layout_marginStart="5dp"/>

        </LinearLayout>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:id="@+id/cb_error"
            android:text="@string/must_accept_rules"
            android:textColor="@color/red"
            android:layout_marginStart="25dp"
            android:layout_marginBottom="10dp"
            android:visibility="gone"/>

        <Button
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:background="@drawable/btn_login_background"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="@color/white"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/tv_login_user"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="10dp"
            android:layout_marginStart="25dp"
            android:layout_marginEnd="25dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:gravity="center"
            android:text="@string/have_an_account" />

    </LinearLayout>

</RelativeLayout>